Cookies: Minor fixes to comments.

In commit #552430 a few struct members were renamed, but code
comments were not updated.

Bug: 823297
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I28c618291fe69e30d2695fb4a062972e64eb4bfa
Reviewed-on: https://chromium-review.googlesource.com/1021658
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554497}
Former-commit-id: f96c536d35a66a07cb267de42c3679b2e36617f0